cmake_minimum_required(VERSION 3.7.2)
project(BSVS-SS23-Prak)

set(CMAKE_C_STANDARD 99)

add_executable(BSVS-SS23-Prak main.c hashtable.c hashtable.h hashtable.c hashtable.c validate_user_input.h validate_user_input.c handle_requests.c handle_requests.c handle_requests.c handle_requests.h handle_methods.c handle_methods.h handle_methods.h)
